--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -99,8 +99,20 @@
 		<value>Contact Us</value>
 	</data>
 
+	<data name="Email" xml:space="preserve">
+		<value>Email</value>
+	</data>
+
+	<data name="FirstName" xml:space="preserve">
+		<value>First Name</value>
+	</data>
+
 	<data name="Home" xml:space="preserve">
 		<value>Home</value>
+	</data>
+
+	<data name="LastName" xml:space="preserve">
+		<value>Last Name</value>
 	</data>
 
 	<data name="Record" xml:space="preserve">
