--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -99,8 +99,20 @@
 		<value>Bize Ulaşın</value>
 	</data>
 
+	<data name="Email" xml:space="preserve">
+		<value>E-Posta</value>
+	</data>
+
+	<data name="FirstName" xml:space="preserve">
+		<value>Ad</value>
+	</data>
+
 	<data name="Home" xml:space="preserve">
 		<value>Ana Sayfa</value>
+	</data>
+
+	<data name="LastName" xml:space="preserve">
+		<value>Soyad</value>
 	</data>
 
 	<data name="Record" xml:space="preserve">
