Implemented Discontinue action for Companies

--- a/Source/CP.i8n/ActionStrings.resx
+++ b/Source/CP.i8n/ActionStrings.resx
@@ -123,6 +123,10 @@
 		<value>Details</value>
 	</data>
 
+	<data name="Discontinue" xml:space="preserve">
+		<value>Discontinue</value>
+	</data>
+
 	<data name="Display" xml:space="preserve">
 		<value>Display</value>
 	</data>
