New entity Manufacturer added to model. New properties of PurchaseOrder added to views

--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -472,7 +472,7 @@
 	</data>
 
 	<data name="CreateManufacturer" xml:space="preserve">
-		<value>Üretici Olu;tur</value>
+		<value>Üretici Oluştur</value>
 	</data>
 
 	<data name="CreateProcess" xml:space="preserve">
