PurchaseOrders/Repeat action added to clone any PurchaseOrder

--- a/Source/CP.i8n/ActionStrings.resx
+++ b/Source/CP.i8n/ActionStrings.resx
@@ -187,6 +187,10 @@
 		<value>Remove</value>
 	</data>
 
+	<data name="Repeat" xml:space="preserve">
+		<value>Repeat</value>
+	</data>
+
 	<data name="Save" xml:space="preserve">
 		<value>Save</value>
 	</data>
