--- a/Source/CP.i8n/ActionStrings.resx
+++ b/Source/CP.i8n/ActionStrings.resx
@@ -111,6 +111,10 @@
 		<value>Clone</value>
 	</data>
 
+	<data name="Continiue" xml:space="preserve">
+		<value>Continiue</value>
+	</data>
+
 	<data name="Create" xml:space="preserve">
 		<value>Create</value>
 	</data>
@@ -145,6 +149,10 @@
 
 	<data name="Erase" xml:space="preserve">
 		<value>Erase</value>
+	</data>
+
+	<data name="Hide" xml:space="preserve">
+		<value>Hide</value>
 	</data>
 
 	<data name="Login" xml:space="preserve">
@@ -183,6 +191,10 @@
 		<value>Register</value>
 	</data>
 
+	<data name="Reject" xml:space="preserve">
+		<value>Reject</value>
+	</data>
+
 	<data name="Remove" xml:space="preserve">
 		<value>Remove</value>
 	</data>
@@ -213,6 +225,18 @@
 
 	<data name="Show" xml:space="preserve">
 		<value>Show</value>
+	</data>
+
+	<data name="Start" xml:space="preserve">
+		<value>Start</value>
+	</data>
+
+	<data name="Stop" xml:space="preserve">
+		<value>Stop</value>
+	</data>
+
+	<data name="Submit" xml:space="preserve">
+		<value>Submit</value>
 	</data>
 
 	<data name="Update" xml:space="preserve">
