--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -59,6 +59,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
 
+	<data name="AccessFailedCount" xml:space="preserve">
+		<value>Erişim Hata Sayısı</value>
+	</data>
+
 	<data name="AddAspNetUser" xml:space="preserve">
 		<value>Uygulama Kullanıcısı Ekle</value>
 	</data>
@@ -81,6 +85,10 @@
 
 	<data name="AddCustomer" xml:space="preserve">
 		<value>Müşteri Ekle</value>
+	</data>
+
+	<data name="AddEmployee" xml:space="preserve">
+		<value>Çalışan Ekle</value>
 	</data>
 
 	<data name="AddFreightTerm" xml:space="preserve">
@@ -113,6 +121,10 @@
 
 	<data name="AddNewCustomer" xml:space="preserve">
 		<value>Yeni Müşteri Ekle</value>
+	</data>
+
+	<data name="AddNewEmployee" xml:space="preserve">
+		<value>Yeni Çalışan Ekle</value>
 	</data>
 
 	<data name="AddNewFreightTerm" xml:space="preserve">
@@ -219,6 +231,10 @@
 		<value>Müşteri Ekle/Çıkar</value>
 	</data>
 
+	<data name="AddRemoveEmployee" xml:space="preserve">
+		<value>Çalışan Ekle/Çıkar</value>
+	</data>
+
 	<data name="AddRemoveFreightTerm" xml:space="preserve">
 		<value>Nakliye Koşulu Ekle/Çıkar</value>
 	</data>
@@ -312,6 +328,10 @@
 	</data>
 
 	<data name="AspNetUser" xml:space="preserve">
+		<value>Uygulama Kullanıcısı</value>
+	</data>
+
+	<data name="AspNetUserId" xml:space="preserve">
 		<value>Uygulama Kullanıcısı</value>
 	</data>
 
@@ -467,6 +487,10 @@
 		<value>Oluşturan Kullanıcı</value>
 	</data>
 
+	<data name="CreateEmployee" xml:space="preserve">
+		<value>Çalışan Oluştur</value>
+	</data>
+
 	<data name="CreateFreightTerm" xml:space="preserve">
 		<value>Nakliye Koşulu Oluştur</value>
 	</data>
@@ -611,6 +635,10 @@
 		<value>Müşteri Sil</value>
 	</data>
 
+	<data name="DeleteEmployee" xml:space="preserve">
+		<value>Çalışanı Sil</value>
+	</data>
+
 	<data name="DeleteFreightTerm" xml:space="preserve">
 		<value>Nakliye Koşulunu Sil</value>
 	</data>
@@ -727,6 +755,10 @@
 		<value>Müşteriyi Düzenle</value>
 	</data>
 
+	<data name="EditEmployee" xml:space="preserve">
+		<value>Çalışanı Düzenle</value>
+	</data>
+
 	<data name="EditFreightTerm" xml:space="preserve">
 		<value>Nakliye Koşulunu Düzenle</value>
 	</data>
@@ -791,6 +823,18 @@
 		<value>E-Posta İş</value>
 	</data>
 
+	<data name="Employee" xml:space="preserve">
+		<value>Çalışan</value>
+	</data>
+
+	<data name="Employees" xml:space="preserve">
+		<value>Çalışanlar</value>
+	</data>
+
+	<data name="EmployeesList" xml:space="preserve">
+		<value>Çalışan Listesi</value>
+	</data>
+
 	<data name="FirstName" xml:space="preserve">
 		<value>Ad</value>
 	</data>
@@ -827,8 +871,16 @@
 		<value>Resim Yolu</value>
 	</data>
 
+	<data name="InactivateDate" xml:space="preserve">
+		<value>İnaktif Tarihi</value>
+	</data>
+
 	<data name="IncotermCode" xml:space="preserve">
 		<value>Incoterms Kodu</value>
+	</data>
+
+	<data name="IsActive" xml:space="preserve">
+		<value>Aktif</value>
 	</data>
 
 	<data name="IsApproved" xml:space="preserve">
@@ -849,6 +901,14 @@
 
 	<data name="LastName" xml:space="preserve">
 		<value>Soyad</value>
+	</data>
+
+	<data name="LockoutEnabled" xml:space="preserve">
+		<value>Hesap Kilitleme Açık</value>
+	</data>
+
+	<data name="LockoutEndDateUtc" xml:space="preserve">
+		<value>Hesap Kilidi Sonlanma Tarihi</value>
 	</data>
 
 	<data name="Manufacturer" xml:space="preserve">
@@ -933,6 +993,14 @@
 
 	<data name="PhoneMobile" xml:space="preserve">
 		<value>Mobil Telefon</value>
+	</data>
+
+	<data name="PhoneNumber" xml:space="preserve">
+		<value>Telefon Numarası</value>
+	</data>
+
+	<data name="PhoneNumberConfirmed" xml:space="preserve">
+		<value>Telefon Numarası Doğrulandı</value>
 	</data>
 
 	<data name="PhoneWork1" xml:space="preserve">
@@ -1085,6 +1153,10 @@
 
 	<data name="RemoveCustomer" xml:space="preserve">
 		<value>Müşteriyi Çıkar</value>
+	</data>
+
+	<data name="RemoveEmployee" xml:space="preserve">
+		<value>Çalışanı Çıkar</value>
 	</data>
 
 	<data name="RemoveFreightTerm" xml:space="preserve">
@@ -1281,6 +1353,10 @@
 
 	<data name="Title" xml:space="preserve">
 		<value>Başlık</value>
+	</data>
+
+	<data name="TwoFactorEnabled" xml:space="preserve">
+		<value>İki Öğeli Kimlik Doğrulama  </value>
 	</data>
 
 	<data name="TwoLetterIsoCode" xml:space="preserve">
